--- a/custom.css
+++ b/custom.css
@@ -1,34 +1,72 @@
-.nav-link{
-    color: purple;
-    }
 
 h1 {
-    color: purple;
+    color: #5E17EB;
 }
 
 h2 {
-    color: purple;
+    color: #5E17EB;
 }
 
 h3 {
-    color: purple;
+    color: #e1bbf0;
 }
 
 h4 {
-    color: purple;
+    color: #e1bbf0;
 }
 
 h5 {
-    color: purple;
+    color: #e1bbf0;
+}
+
+:root {
+    --bs-border-width: 0;
+    --bs-link-hover-color: white;
+    --bs-body-font-family:  Arial, Helvetica, sans-serif;
+}
+
+.nav-link{
+    color: #5E17EB;
+    }
+
+.navHeader {
+    background-color: #e1bbf0;
+    border-radius: 25px;
 }
 
 .card-title {
-    color: purple;
+    color: #5E17EB;
+}
+
+.imgIcon {
+    border: 3px dotted #e1bbf0;
+    border-radius: 15px;
+    width: 275px; 
+}
+
+.list-group-item {
+    border: 1px solid #5E17EB;
+}
+
+.projectCard {
+    border: 1px solid #5E17EB;
+    box-shadow: 100px 100px 100px red;
+}
+
+.className {
+    color: #382c3d;
+}
+
+.headerImg {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 #creatorThumbnail {
     border-radius: 25px;
-    border: 2px solid purple;
+    border: 2px solid #5E17EB;
     padding: 20px;
     width: 200px;
     height: 150px;
@@ -37,8 +75,12 @@ h5 {
 #externalLinks {
     margin-top: 15px;
     border-radius: 25px;
-    border: 2px solid purple;
+    border: 2px solid #5E17EB;
     padding: 20px;
     width: 200px;
     height: 500px;
+}
+
+#creator-list {
+    border: 1px solid #5E17EB;
 }
