--- a/custom.css
+++ b/custom.css
@@ -93,3 +93,12 @@ h5 {
 #creator-list {
     border: 1px solid #5E17EB;
 }
+
+.creatorListItem:hover {
+    scale: 1.01 1;
+}
+
+.creatorListItem {
+    transition: 0.2s;
+    border: 1px solid #5E17EB;
+}
