Changed home page card fonts

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -8,15 +8,15 @@ h2 {
 }
 
 h3 {
-    color: #e1bbf0;
+    color: #5E17EB;
 }
 
 h4 {
-    color: #e1bbf0;
+    color: #5E17EB;
 }
 
 h5 {
-    color: #e1bbf0;
+    color: #5E17EB;
 }
 
 :root {
